--- a/config/nginx/localhost.nginx.conf
+++ b/config/nginx/localhost.nginx.conf
@@ -17,9 +17,9 @@ http {
 
 	# Override some buffer limitations, will prevent DDOS too.
 	client_body_buffer_size 10K;
-	client_header_buffer_size 1k;
-	client_max_body_size 8m;
-	large_client_header_buffers 2 1k;
+	client_header_buffer_size 1K;
+	client_max_body_size 8M;
+	large_client_header_buffers 2 1K;
 
 	# send the client a "request timed out" if the body is not loaded by this time. Default 60.
 	client_body_timeout 32;
