--- a/config/nginx/server.conf
+++ b/config/nginx/server.conf
@@ -16,7 +16,7 @@ server {
 	ssl_certificate_key /etc/nginx/ssl/servername.key;
 	location = /favicon.ico { access_log off; log_not_found off; }
 	location = /robots.txt { access_log off; log_not_found off; }
-	location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml|xls|xlsx|svg|doc|docx|txt|ttf|eot|woff|woff2)$ {
+	location ~* \.(jpg|jpeg|gif|png|webp|css|js|ico|xml|xls|xlsx|svg|doc|docx|txt|ttf|eot|woff|woff2)$ {
 		add_header Access-Control-Allow-Origin *;
 		access_log off;
 		log_not_found off;
