--- a/config/nginx/localhost.conf
+++ b/config/nginx/localhost.conf
@@ -1,49 +1,72 @@
-server {
-	listen 8000 ssl http2;
-	listen [::]:8000 ssl http2;
-	server_name localhost;
-	root /mnt/d/www;
-	index index.php index.html index.htm;
-	include snippets/snakeoil.conf;
-	location = /favicon.ico { access_log off; log_not_found off; }
-	location = /robots.txt { access_log off; log_not_found off; }
-	location ~* \.(jpg|jpeg|gif|png|webp|css|js|ico|xml|xls|xlsx|svg|doc|docx|txt|ttf|eot|woff|woff2)$ {
-		add_header Access-Control-Allow-Origin *;
-		access_log off;
-		log_not_found off;
-		expires max;
-	}
-	location / {
-		autoindex on;
-		try_files $uri $uri/ /index.php$is_args$args;
-	}
-	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
-		include fastcgi_params;
-		fastcgi_pass unix:/run/php/php8.1-fpm.sock;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	}
-	location ~ /\.(ht|svn) {
-		access_log off;
-		log_not_found off;
-		deny all;
-	}
-	# phpMyAdmin
-	location /phpmyadmin {
-		root /usr/share/;
-		index index.php index.html index.htm;
-		location ~ \.php$ {
-			include snippets/fastcgi-php.conf;
-			include fastcgi_params;
-			fastcgi_pass unix:/run/php/php8.1-fpm.sock;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		}
-		location ~* ^/phpmyadmin/(.+\.(jpg|jpeg|gif|css|png|js|ico|html|xml|txt))$ {
-			root /usr/share/;
-		}
-	}
-	location /pma {
-		rewrite ^/* /phpmyadmin last;
-	}
+upstream backend8 {
+    server unix:/run/php/php8.3-fpm.sock;
+    keepalive 10;
 }
 
+upstream backend7 {
+    server unix:/run/php/php7.4-fpm.sock;
+    keepalive 10;
+}
+
+upstream backend5 {
+    server unix:/run/php/php5.6-fpm.sock;
+    keepalive 10;
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name localhost;
+    root /mnt/d/www;
+
+    # SSL
+    # include snippets/snakeoil.conf;
+    ssl_certificate /etc/nginx/ssl/localhost.pem;
+    ssl_certificate_key /etc/nginx/ssl/localhost.key;
+    # ssl_trusted_certificate /etc/nginx/ssl/cloudflare.pem;
+
+    # Security
+    include conf-security.conf;
+
+    # Logging
+    access_log off;
+    error_log /var/log/nginx/error.log warn;
+
+    # Index
+    index index.php index.html index.htm;
+
+    # Index Fallback
+    location / {
+        autoindex on;
+        autoindex_localtime on;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # Additional Configuration
+    include conf-general.conf;
+    include conf-phpmyadmin.conf;
+    include conf-wordpress.conf;
+
+    # PHP Handling
+    location ~ [^/]\.php(/|$) {
+        include conf-fastcgi.conf;
+        fastcgi_pass backend8;
+    }
+
+    # Custom Location
+    location /media {
+        autoindex on;
+        autoindex_localtime on;
+        alias /mnt/d/www/media;
+        include conf-general.conf;
+    }
+}
+
+# HTTP redirect
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
