--- a/config/mysql/server.my.cnf
+++ b/config/mysql/server.my.cnf
@@ -19,36 +19,35 @@ character_set_client_handshake  = FALSE
 character_set_server            = utf8mb4
 collation_server                = utf8mb4_unicode_ci
 datadir                         = /var/lib/mysql
-#default_authentication_plugin  = mysql_native_password # Enable in MySQL 8+ or MariaDB 10.6+ for backwards compatibility with common CMSs
+default_authentication_plugin   = mysql_native_password
 event_scheduler                 = ON # OFF for SLAVE
 max_allowed_packet              = 256M
 max_connect_errors              = 1000000
 performance_schema              = ON # OFF for SLAVE
 pid_file                        = /run/mysqld/mysqld.pid
 port                            = 3306
-skip_external_locking
-skip_name_resolve
+skip_external_locking           = 1
+skip_name_resolve               = 1
 socket                          = /run/mysqld/mysqld.sock
 tmpdir                          = /tmp
 user                            = mysql
 
 # SQL Compatibility Mode
-sql_mode                        = STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
+sql_mode                        = NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
 
 # InnoDB Settings
 default_storage_engine          = InnoDB
 innodb                          = FORCE
-innodb_buffer_pool_instances    = 8     # Use 1 instance per 1GB of InnoDB pool size - max is 64
-innodb_buffer_pool_size         = 8G    # Use up to 70-80% of RAM
+innodb_buffer_pool_size         = 8G # Use up to 70-80% of RAM
 innodb_file_per_table           = 1
 innodb_flush_log_at_trx_commit  = 0
 innodb_flush_method             = O_DIRECT
-innodb_sort_buffer_size         = 4M    # UPD - Defines how much data is read into memory for sorting operations before writing to disk (default is 1M / max is 64M)
-#innodb_io_capacity             = 2000  # Depends on the storage tech - use 2000 for SSD, more for NVMe
-#innodb_io_capacity_max         = 4000  # Usually double the value of innodb_io_capacity
+innodb_io_capacity              = 2000 # Depends on the storage tech - use 2000 for SSD, more for NVMe
+innodb_io_capacity_max          = 4000 # Usually double the value of innodb_io_capacity
 innodb_log_buffer_size          = 16M
-innodb_log_file_size            = 1G
+innodb_log_file_size            = 2G
 innodb_read_io_threads          = 64
+innodb_sort_buffer_size         = 4M # UPD - Defines how much data is read into memory for sorting operations before writing to disk (default is 1M / max is 64M)
 innodb_stats_on_metadata        = 0
 #innodb_temp_data_file_path     = ibtmp1:64M:autoextend:max:20G
 #innodb_thread_concurrency      = 4     # UPD
@@ -60,17 +59,18 @@ key_buffer_size                 = 24M   # UPD
 low_priority_updates            = 1
 #myisam_recover_options         = FORCE,BACKUP
 #query_cache_limit              = 4M    # UPD
-#query_cache_size               = 64M   # UPD
-#query_cache_type               = 1     # UPD
+#query_cache_size               = 0     # UPD
+#query_cache_type               = 0     # UPD
 
 # Connection Settings
 back_log                        = 512
-interactive_timeout             = 180
-max_connections                 = 50    # UPD - Important: high no. of connections = high RAM consumption
-max_statement_time              = 90
-thread_cache_size               = 100
+connect_timeout                 = 15
+interactive_timeout             = 20
+max_connections                 = 150   # UPD - Important: high no. of connections = high RAM consumption
+max_statement_time              = 60
+thread_cache_size               = 32
 thread_stack                    = 192K
-wait_timeout                    = 180
+wait_timeout                    = 20
 
 # Buffer Settings
 join_buffer_size                = 4M    # UPD
@@ -91,19 +91,19 @@ ft_min_word_len                 = 3
 # Logging
 log_error                       = /var/log/mysql/error.log
 log_queries_not_using_indexes   = 0
-log_warnings                    = 1
-long_query_time                 = 5
+log_warnings                    = 0
+long_query_time                 = 2
 slow_query_log                  = 0
 slow_query_log_file             = /var/log/mysql/slow.log
 
 # BINARY LOGGING #
-binlog_do_db                    = abctest # Enable for MASTER
+binlog_do_db                    = app # Enable for MASTER
 #binlog_expire_logs_seconds     = 1209600 # Keep logs for 14 days (in seconds) - For MySQL 8+ & MariaDB 10.6+ only
 binlog_ignore_db                = information_schema,mysql,performance_schema,phpmyadmin,sys # Enable for MASTER
 expire_logs_days                = 14
 log_bin                         = /var/log/mysql/mysql-bin
 log_bin_index                   = /var/log/mysql/mysql-bin.index
-#replicate_do_db                = abctest # Enable for SLAVE
+#replicate_do_db                = app # Enable for SLAVE
 #replicate_ignore_db            = information_schema,mysql,performance_schema,phpmyadmin,sys # Enable for SLAVE
 server_id                       = 1
 sync-binlog                     = 1
