--- a/config/nginx/server.conf
+++ b/config/nginx/server.conf
@@ -1,57 +1,53 @@
-server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
-	location / {
-		return 301 https://$host$request_uri;
-	}
+upstream backend {
+    server unix:/run/php/php-fpm-pool1.sock weight=100 max_fails=3 fail_timeout=30;
+    server unix:/run/php/php-fpm-pool2.sock weight=100 max_fails=3 fail_timeout=30;
+    keepalive 10;
 }
 
 server {
-	listen 443 ssl http2;
-	listen [::]:443 ssl http2;
-	server_name servername serveralias;
-	root serverroot/serverapp;
-	index index.php index.html index.htm;
-	ssl_certificate /etc/nginx/ssl/bundle.crt;
-	ssl_certificate_key /etc/nginx/ssl/servername.key;
-	location = /favicon.ico { access_log off; log_not_found off; }
-	location = /robots.txt { access_log off; log_not_found off; }
-	location ~* \.(jpg|jpeg|gif|png|webp|css|js|ico|xml|xls|xlsx|svg|doc|docx|txt|ttf|eot|woff|woff2)$ {
-		add_header Access-Control-Allow-Origin *;
-		access_log off;
-		log_not_found off;
-		expires max;
-	}
-	location / {
-		try_files $uri $uri/ /index.php$is_args$args;
-	}
-	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
-		include fastcgi_params;
-		fastcgi_pass unix:/run/php/php-fpm.sock;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	}
-	location ~ /\.(ht|svn) {
-		access_log off;
-		log_not_found off;
-		deny all;
-	}
-	# phpMyAdmin
-	location /phpmyadmin {
-		root /usr/share/;
-		index index.php index.html index.htm;
-		location ~ \.php$ {
-			include snippets/fastcgi-php.conf;
-			include fastcgi_params;
-			fastcgi_pass unix:/run/php/php-fpm.sock;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		}
-		location ~* ^/phpmyadmin/(.+\.(jpg|jpeg|gif|css|png|js|ico|html|xml|txt))$ {
-			root /usr/share/;
-		}
-	}
-	location /pma {
-		rewrite ^/* /phpmyadmin last;
-	}
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name servername serveralias;
+    root serverroot/serverapp;
+
+    # SSL
+    # include snippets/snakeoil.conf;
+    ssl_certificate /etc/nginx/ssl/servername.crt;
+    ssl_certificate_key /etc/nginx/ssl/servername.key;
+    ssl_trusted_certificate /etc/nginx/ssl/cloudflare.pem;
+
+    # Security
+    include conf-security.conf;
+
+    # Logging
+    access_log off;
+    error_log /var/log/nginx/error.log crit;
+
+    # Index
+    index index.php index.html index.htm;
+
+    # Index Fallback
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # Additional Configuration
+    include conf-general.conf;
+    # include conf-phpmyadmin.conf;
+    # include conf-wordpress.conf;
+
+    # PHP Handling
+    location ~ [^/]\.php(/|$) {
+        include conf-fastcgi.conf;
+        fastcgi_pass backend;
+    }
 }
 
+# HTTP redirect
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
