Update to newer script

--- a/config/mysql/localhost.my.cnf
+++ b/config/mysql/localhost.my.cnf
@@ -6,11 +6,13 @@ character_set_server            = utf8mb4
 collation_server                = utf8mb4_unicode_ci
 datadir                         = /var/lib/mysql
 event_scheduler                 = OFF
+innodb_buffer_pool_size         = 1G
+innodb_log_file_size            = 256M
 log_error                       = /var/log/mysql/error.log
 log_queries_not_using_indexes   = 1
 log_warnings                    = 1
 long_query_time                 = 3
-performance_schema              = OFF
+performance_schema              = ON
 pid_file                        = /run/mysqld/mysqld.pid
 port                            = 3306
 skip_external_locking           = 1
@@ -18,5 +20,7 @@ skip_name_resolve               = OFF
 slow_query_log                  = 1
 slow_query_log_file             = /var/log/mysql/slow.log
 socket                          = /run/mysqld/mysqld.sock
+sql_mode                        = NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
+table_definition_cache          = 1000
 tmpdir                          = /tmp
 user                            = mysql
