--- a/config/nginx/conf-security.conf
+++ b/config/nginx/conf-security.conf
@@ -5,7 +5,11 @@ add_header X-Content-Type-Options "nosniff" always;
 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 add_header Permissions-Policy "interest-cohort=()" always;
-#add_header Content-Security-Policy "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
+#add_header_server Content-Security-Policy "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
+#add_header_localhost Access-Control-Allow-Origin '*' always;
+#add_header_localhost Access-Control-Allow-Headers '*';
+#add_header_localhost Access-Control-Allow-Methods '*';
+#add_header_localhost Access-Control-Allow-Credentials 'true';
 
 # . files
 location ~ /\.(?!well-known) {
