Add support php 8.4

--- a/config/apache/localhost.conf
+++ b/config/apache/localhost.conf
@@ -9,8 +9,8 @@
 		ServerName localhost
 		ServerAlias localhost
 		ServerAdmin webmaster@localhost
-		DocumentRoot /mnt/d/www/
-		<Directory /mnt/d/www/>
+		DocumentRoot /mnt/d/www
+		<Directory /mnt/d/www>
 			Options Indexes FollowSymLinks MultiViews
 			AllowOverride All
 			Require all granted
