--- a/config/nginx/localhost.conf
+++ b/config/nginx/localhost.conf
@@ -1,15 +1,30 @@
-upstream backend8 {
-    server unix:/run/php/php8.3-fpm.sock;
+upstream backend56 {
+    server unix:/run/php/php5.6-fpm.sock;
     keepalive 10;
 }
 
-upstream backend7 {
+upstream backend74 {
     server unix:/run/php/php7.4-fpm.sock;
     keepalive 10;
 }
 
-upstream backend5 {
-    server unix:/run/php/php5.6-fpm.sock;
+upstream backend81 {
+    server unix:/run/php/php8.1-fpm.sock;
+    keepalive 10;
+}
+
+upstream backend82 {
+    server unix:/run/php/php8.2-fpm.sock;
+    keepalive 10;
+}
+
+upstream backend83 {
+    server unix:/run/php/php8.3-fpm.sock;
+    keepalive 10;
+}
+
+upstream backend84 {
+    server unix:/run/php/php8.4-fpm.sock;
     keepalive 10;
 }
 
@@ -50,7 +65,7 @@ server {
     # PHP Handling
     location ~ [^/]\.php(/|$) {
         include conf-fastcgi.conf;
-        fastcgi_pass backend8;
+        fastcgi_pass backend83;
     }
 
     # Custom Location
