--- a/config/apache/server.conf
+++ b/config/apache/server.conf
@@ -9,8 +9,8 @@
 		ServerName servername
 		ServerAlias serveralias
 		ServerAdmin webmaster@servername
-		DocumentRoot serverroot/serverapp/
-		<Directory serverroot/serverapp/>
+		DocumentRoot serverroot/serverapp
+		<Directory serverroot/serverapp>
 			Options Indexes FollowSymLinks MultiViews
 			AllowOverride All
 			Require all granted
@@ -18,7 +18,7 @@
 		ErrorLog serverroot/serverapp/error-ssl.log
 		#CustomLog serverroot/serverapp/access-ssl.log combined
 		SSLEngine on
-		SSLCertificateFile /etc/apache2/ssl/servername.pem
+		SSLCertificateFile /etc/apache2/ssl/servername.crt
 		SSLCertificateKeyFile /etc/apache2/ssl/servername.key
 		SSLCertificateChainFile /etc/apache2/ssl/cloudflare.pem
 		Protocols h2 http/1.1
